--- a/_layouts/default.haml
+++ b/_layouts/default.haml
@@ -22,7 +22,7 @@
       .header_info 
         %a{ href: "http://www.qnnsafe.com/qnnsafe/" }
           %img{ src: "http://www.qnnsafe.com/images/head-qnn-logo.png", title: "全能保险柜", alt: "全能保险柜" } 
-        %a{ href: "http://www.annsafe.com" }
+        %a{ href: "http://www.annsafe.com", target: "_blank" }
           %img{ src: "http://www.qnnsafe.com/images/head-annsafe-logo.png", title: "艾能保险柜", alt: "艾能保险柜" } 
         %a{ href: "http://www.qnnsafe.com/bdgsafe/" }
           %img{ src: "http://www.qnnsafe.com/images/head-bdgsafe-logo.png", title: "斑点狗保险柜", alt: "斑点狗保险柜" } 
@@ -89,11 +89,11 @@
             .figure
             %ul.model
               %li<
-                %a{ title: "艾能君王" } 艾能保罗
+                %a{ href: "http://www.annsafe.com", target: "_blank", title: "艾能君王" } 艾能保罗
               %li<
-                %a{ title: "艾能君威" } 艾能君威
+                %a{ href: "http://www.annsafe.com", target: "_blank", title: "艾能君威" } 艾能君威
               %li<
-                %a{ title: "艾能君王" } 艾能君王
+                %a{ href: "http://www.annsafe.com", target: "_blank", title: "艾能君王" } 艾能君王
           %li
             .figure
             %ul.model
