--- a/index.haml
+++ b/index.haml
@@ -67,7 +67,7 @@ full_title: 保险柜,家用保险柜-全能保险柜箱十大品牌官网
 #promo
   %ul
     %li
-      %a{ href: "{{ site.www.qnnsafe.com }}/support/", class: "promo_04", title: "全能保险柜服务与支持" }
+      %a{ href: "{{ site.http://detail.ju.taobao.com/home.htm?spm=608.7236093.all1.16.STvZjz&item_id=16405178724&id=10000003352816 }}/support/", class: "promo_04", title: "全能保险柜服务与支持" }
     %li
       %a{ href: "{{ site.www.qnnsafe.com }}/cases/", class: "promo_02", title: "全能保险柜酒店工程案例" }
     %li
