--- a/_layouts/default.haml
+++ b/_layouts/default.haml
@@ -89,11 +89,11 @@
             .figure
             %ul.model
               %li<
-                %a{ href: "http://www.annsafe.com", target: "_blank", title: "艾能君王" } 艾能保罗
+                %a{ href: "http://www.qnnsafe.com/", target: "_blank", title: "艾能君王" } 艾能保罗
               %li<
-                %a{ href: "http://www.annsafe.com", target: "_blank", title: "艾能君威" } 艾能君威
+                %a{ href: "http://www.qnnsafe.com", target: "_blank", title: "艾能君威" } 艾能君威
               %li<
-                %a{ href: "http://www.annsafe.com", target: "_blank", title: "艾能君王" } 艾能君王
+                %a{ href: "http://www.qnnsafe.com", target: "_blank", title: "艾能君王" } 艾能君王
           %li
             .figure
             %ul.model
