--- a/_assets/stylesheets/mobile.css.scss
+++ b/_assets/stylesheets/mobile.css.scss
@@ -307,7 +307,7 @@
       text-align: center;
 
       .figure {
-        background: url(/assets/images/product_sprites.jpg) no-repeat 0 0;
+        background: url(/assets/images/product_sprites.png) no-repeat 0 0;
         width: 110px;
         height: 110px;
         margin: 0 auto 15px;
