--- a/_layouts/default.haml
+++ b/_layouts/default.haml
@@ -89,11 +89,11 @@
             .figure
             %ul.model
               %li<
-                %a{ href: "http://www.qnnsafe.com/", target: "_blank", title: "艾能君王" } 艾能保罗
+                %a{ href: "http://www.annsafe.com/#/products/pl-3340.html", target: "_blank", title: "艾能君王" } 艾能保罗
               %li<
-                %a{ href: "http://www.qnnsafe.com", target: "_blank", title: "艾能君威" } 艾能君威
+                %a{ href: "http://www.annsafe.com/#/products/jw-60k.html", target: "_blank", title: "艾能君威" } 艾能君威
               %li<
-                %a{ href: "http://www.qnnsafe.com", target: "_blank", title: "艾能君王" } 艾能君王
+                %a{ href: "http://www.annsafe.com/#/products/jh-60t.html", target: "_blank", title: "艾能君王" } 艾能君王
           %li
             .figure
             %ul.model
@@ -117,7 +117,7 @@
         %a.hide_if_mobile{ href: "{{ site.www.qnnsafe.com }}/Sitemap.xml" }Sitemap
         %br
         网站建设维护与优化：
-        %a{ href: "http://www.8html.com/" }8HTML    
+        %a{ href: "http://www.osw.cc/" }OSW    
       .right
         %a{ href: "http://e.weibo.com/qnnsafe", class: "lang lang-weibo social-media", title: "关注全能保险柜官方微博账号", data: { mfp: { src: "/assets/images/qnn-weibo.png" } } } 全能保险柜官方微博账号
         %a{ href: "/assets/images/qnn-weixin.png", class: "lang lang-weixin social-media", title: "扫描QR码关注全能保险柜官方微信账号" } 全能保险柜官方微信账号
