--- a/_layouts/default.haml
+++ b/_layouts/default.haml
@@ -117,7 +117,7 @@
         %a.hide_if_mobile{ href: "{{ site.www.qnnsafe.com }}/Sitemap.xml" }Sitemap
         %br
         网站建设维护与优化：
-        %a{ href: "http://www.osw.cc/" }OSW    
+        %a{ href: "http://osw.cc/" }OSW    
       .right
         %a{ href: "http://e.weibo.com/qnnsafe", class: "lang lang-weibo social-media", title: "关注全能保险柜官方微博账号", data: { mfp: { src: "/assets/images/qnn-weibo.png" } } } 全能保险柜官方微博账号
         %a{ href: "/assets/images/qnn-weixin.png", class: "lang lang-weixin social-media", title: "扫描QR码关注全能保险柜官方微信账号" } 全能保险柜官方微信账号
