--- a/_layouts/default.haml
+++ b/_layouts/default.haml
@@ -50,41 +50,41 @@
             .figure
             %ul.model
               %li<
-                %a{ href: "{{ site.www.qnnsafe.com }}/b-4538.html", title: "家用保险柜全能金库" } 全能金库
+                %a{ href: "{{ site.www.qnnsafe.com }}/products/b-4538.html", title: "家用保险柜全能金库" } 全能金库
               %li<
-                %a{ href: "{{ site.www.qnnsafe.com }}/bw-6960.html", title: "家用保险箱风生水起" } 全能风生水起
+                %a{ href: "{{ site.www.qnnsafe.com }}/products/bw-6960.html", title: "家用保险箱风生水起" } 全能风生水起
               %li<
-                %a{ href: "{{ site.www.qnnsafe.com }}/kl-4045.html", title: "保险柜十大品牌可拉珍藏" } 全能可拉珍藏
+                %a{ href: "{{ site.www.qnnsafe.com }}/products/kl-4045.html", title: "保险柜十大品牌可拉珍藏" } 全能可拉珍藏
               %li<
-                %a{ href: "{{ site.www.qnnsafe.com }}/gtx-3345.html", title: "保险柜钢铁侠" } 全能钢铁侠
+                %a{ href: "{{ site.www.qnnsafe.com }}/products/gtx-3345.html", title: "保险柜钢铁侠" } 全能钢铁侠
               %li<
-                %a{ href: "{{ site.www.qnnsafe.com }}/glf-3340.html", title: "保险箱高尔夫" } 全能高尔夫
+                %a{ href: "{{ site.www.qnnsafe.com }}/products/glf-3340.html", title: "保险箱高尔夫" } 全能高尔夫
           %li
             .figure
             %ul.model
               %li<
-                %a{ href: "{{ site.www.qnnsafe.com }}/zf-4542.html", title: "保险柜指点江山" } 全能指点江山
+                %a{ href: "{{ site.www.qnnsafe.com }}/products/zf-4542.html", title: "保险柜指点江山" } 全能指点江山
               %li<
-                %a{ href: "{{ site.www.qnnsafe.com }}/hg-2740.html", title: "保险柜十大品牌新皇冠" } 全能皇冠
+                %a{ href: "{{ site.www.qnnsafe.com }}/products/hg-2740.html", title: "保险柜十大品牌新皇冠" } 全能皇冠
               %li<
-                %a{ href: "{{ site.www.qnnsafe.com }}/sjb-1630br.html", title: "家用保险箱铁管家" } 全能铁管家
+                %a{ href: "{{ site.www.qnnsafe.com }}/products/sjb-1630br.html", title: "家用保险箱铁管家" } 全能铁管家
               %li<
-                %a{ href: "{{ site.www.qnnsafe.com }}/tgg-2040br.html", title: "家用保险柜铁金刚" } 全能铁金刚
+                %a{ href: "{{ site.www.qnnsafe.com }}/products/tgg-2040br.html", title: "家用保险柜铁金刚" } 全能铁金刚
               %li<
                 %a{ href: "{{ site.www.qnnsafe.com }}/fg-2940br.html", title: "保险箱钢将军" } 全能钢将军
           %li
             .figure
             %ul.model
               %li<
-                %a{ href: "{{ site.www.qnnsafe.com }}/jd-3340.html", title: "潘多拉系列" } 全能潘多拉
+                %a{ href: "{{ site.www.qnnsafe.com }}/products/jd-3340.html", title: "潘多拉系列" } 全能潘多拉
               %li<
-                %a{ href: "{{ site.www.qnnsafe.com }}/ai-5842.html", title: "欧若拉系列" } 全能欧若拉
+                %a{ href: "{{ site.www.qnnsafe.com }}/products/ai-5842.html", title: "欧若拉系列" } 全能欧若拉
               %li<
-                %a{ href: "{{ site.www.qnnsafe.com }}/kb-5842.html", title: "酷宝系列" } 全能酷宝
+                %a{ href: "{{ site.www.qnnsafe.com }}/products/kb-5842.html", title: "酷宝系列" } 全能酷宝
               %li<
-                %a{ href: "{{ site.www.qnnsafe.com }}/sp-4538.html", title: "尚品系列" } 全能尚品
+                %a{ href: "{{ site.www.qnnsafe.com }}/products/sp-4538.html", title: "尚品系列" } 全能尚品
               %li<
-                %a{ href: "{{ site.www.qnnsafe.com }}/sz-3842.html", title: "圣指系列" } 全能圣指
+                %a{ href: "{{ site.www.qnnsafe.com }}/products/sz-3842.html", title: "圣指系列" } 全能圣指
           %li
             .figure
             %ul.model
@@ -108,7 +108,7 @@
           .buttons
             %a#catalog_go.button{ href: "#" } 前往产品页
         .catelog_bottom
-          %a{ href: "{{ site.www.qnnsafe.com }}/find/", title: "寻找适合你的全能保险柜" } 寻找适合你的全能保险柜 &raquo;
+          %a{ href: "{{ site.www.qnnsafe.com }}/products/", title: "寻找适合你的全能保险柜" } 寻找适合你的全能保险柜 &raquo;
     {{ content }}
     %footer
       .left
