--- a/pages/products.haml
+++ b/pages/products.haml
@@ -1,8 +1,8 @@
 ---
 layout: default
 body_style: page
-belongs_to: find
-permalink: /find/
+belongs_to: products
+permalink: /products/
 title: 寻找适合你的保险柜
 keywords: 保险柜导购
 description: 寻找适合你的全能保险柜
@@ -52,218 +52,218 @@ description: 寻找适合你的全能保险柜
 
 #finder
   .item.use-home.use-business.type-cabinet.lock-mechanical.height-31-50-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/b-4538.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/b-4538.html" }
       %img{ src: "{{ site.prodimgs }}/b-4538.jpg" }
       .item_title 全能金库B-4538
   .item.use-home.use-business.type-cabinet.lock-mechanical.height-51-80-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/b-5440.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/b-5440.html" }
       %img{ src: "{{ site.prodimgs }}/b-5440.jpg" }
       .item_title 全能金库B-5440
   .item.use-home.use-business.type-cabinet.lock-mechanical.height-51-80-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/b-7348.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/b-7348.html" }
       %img{ src: "{{ site.prodimgs }}/b-7348.jpg" }
       .item_title 全能金库B-7348
   .item.use-home.use-business.type-cabinet.lock-mechanical.height-81-160-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/b-9858.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/b-9858.html" }
       %img{ src: "{{ site.prodimgs }}/b-9858.jpg" }
       .item_title 全能金库B-9858
   .item.use-home.type-cabinet.lock-electronic.height-51-80-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/bw-6960.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/bw-6960.html" }
       %img{ src: "{{ site.prodimgs }}/bw-6960.jpg" }
       .item_title 风生水起BW-6960     
   .item.use-home.type-cabinet.lock-electronic.height-31-50-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/kl-4045.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/kl-4045.html" }
       %img{ src: "{{ site.prodimgs }}/kl-4045.jpg" }
       .item_title 可拉珍藏KL-4045
   .item.use-home.type-cabinet.lock-electronic.height-31-50-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/gtx-3345.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/gtx-3345.html" }
       %img{ src: "{{ site.prodimgs }}/gtx-3345.jpg" }
       .item_title 钢铁侠GTX-3345
   .item.use-home.type-cabinet.lock-electronic.height-31-50-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/gtx-4542.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/gtx-4542.html" }
       %img{ src: "{{ site.prodimgs }}/gtx-4542.jpg" }
       .item_title 钢铁侠GTX-4542
   .item.use-home.type-cabinet.lock-electronic.height-51-80-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/gtx-5842.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/gtx-5842.html" }
       %img{ src: "{{ site.prodimgs }}/gtx-5842.jpg" }
       .item_title 钢铁侠GTX-5842
   .item.use-home.type-cabinet.lock-electronic.height-51-80-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/gtx-6845.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/gtx-6845.html" }
       %img{ src: "{{ site.prodimgs }}/gtx-6845.jpg" }
       .item_title 钢铁侠GTX-6845
   .item.use-home.type-cabinet.lock-electronic.height-81-160-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/gtx-9050.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/gtx-9050.html" }
       %img{ src: "{{ site.prodimgs }}/gtx-9050.jpg" }
       .item_title 钢铁侠GTX-9050      
   .item.use-home.type-cabinet.lock-electronic.height-81-160-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/gtx-11860.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/gtx-11860.html" }
       %img{ src: "{{ site.prodimgs }}/gtx-11860.jpg" }
       .item_title 钢铁侠GTX-11860
   .item.use-home.type-cabinet.lock-electronic.height-81-160-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/gtx-15870.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/gtx-15870.html" }
       %img{ src: "{{ site.prodimgs }}/gtx-15870.jpg" }
       .item_title 钢铁侠GTX-15870      
   .item.use-home.type-cabinet.lock-electronic.height-31-50-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/glf-3340.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/glf-3340.html" }
       %img{ src: "{{ site.prodimgs }}/glf-3340.jpg" }
       .item_title 高尔夫GLF-3340
   .item.use-home.type-cabinet.lock-electronic.height-31-50-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/glf-4540.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/glf-4540.html" }
       %img{ src: "{{ site.prodimgs }}/glf-4540.jpg" }
       .item_title 高尔夫GLF-4540
   .item.use-home.type-cabinet.lock-electronic.height-51-80-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/glf-5842.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/glf-5842.html" }
       %img{ src: "{{ site.prodimgs }}/glf-5842.jpg" }
       .item_title 高尔夫GLF-5842
   .item.use-home.type-cabinet.lock-electronic.height-51-80-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/glf-7042.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/glf-7042.html" }
       %img{ src: "{{ site.prodimgs }}/glf-7042.jpg" }
       .item_title 高尔夫GLF-7042
   .item.use-home.type-cabinet.lock-electronic.height-51-80-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/glf-7550.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/glf-7550.html" }
       %img{ src: "{{ site.prodimgs }}/glf-7550.jpg" }
       .item_title 高尔夫GLF-7550
   .item.use-home.type-cabinet.lock-electronic.height-81-160-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/glf-8550.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/glf-8550.html" }
       %img{ src: "{{ site.prodimgs }}/glf-8550.jpg" }
       .item_title 高尔夫GLF-8550
   .item.use-home.use-business.type-cabinet.lock-fingerprint.height-31-50-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/zf-4542.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/zf-4542.html" }
       %img{ src: "{{ site.prodimgs }}/zf-4542.jpg" }
       .item_title 指点江山ZF-4542Ⅱ
   .item.use-home.use-business.type-cabinet.lock-fingerprint.height-51-80-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/zf-5842.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/zf-5842.html" }
       %img{ src: "{{ site.prodimgs }}/zf-5842.jpg" }
       .item_title 指点江山ZF-5842Ⅱ
   .item.use-home.use-business.type-cabinet.lock-fingerprint.height-81-160-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/zf-8550.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/zf-8550.html" }
       %img{ src: "{{ site.prodimgs }}/zf-8550.jpg" }
       .item_title 指点江山ZF-8550Ⅱ
   .item.use-home.use-business.type-cabinet.lock-fingerprint.height-81-160-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/zf-9555.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/zf-9555.html" }
       %img{ src: "{{ site.prodimgs }}/zf-9555.jpg" }
       .item_title 指点江山ZF-9555Ⅱ
   .item.use-home.use-business.type-cabinet.lock-electronic.height-15-30-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/hg-2740.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/hg-2740.html" }
       %img{ src: "{{ site.prodimgs }}/hg-2740.jpg" }
       .item_title 新皇冠HG-2740
   .item.use-home.use-business.type-cabinet.lock-electronic.height-31-50-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/hg-3342.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/hg-3342.html" }
       %img{ src: "{{ site.prodimgs }}/hg-3342.jpg" }
       .item_title 新皇冠HG-3342
   .item.use-home.use-business.type-cabinet.lock-electronic.height-51-80-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/hg-5840.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/hg-5840.html" }
       %img{ src: "{{ site.prodimgs }}/hg-5840.jpg" }
       .item_title 新皇冠HG-5840
   .item.use-home.use-business.type-cabinet.lock-electronic.height-81-160-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/hg-6842.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/hg-6842.html" }
       %img{ src: "{{ site.prodimgs }}/hg-6842.jpg" }
       .item_title 新皇冠HG-6842
   .item.use-home.use-business.type-cabinet.lock-electronic.height-81-160-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/hg-11860.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/hg-11860.html" }
       %img{ src: "{{ site.prodimgs }}/hg-11860.jpg" }
       .item_title 新皇冠HG-11860
   .item.use-home.use-business.type-cabinet.lock-electronic.height-81-160-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/hg-15870.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/hg-15870.html" }
       %img{ src: "{{ site.prodimgs }}/hg-15870.jpg" }
       .item_title 新皇冠HG-15870
   .item.use-home.type-box.lock-electronic.height-15-30-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/sjb-1630br.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/sjb-1630br.html" }
       %img{ src: "{{ site.prodimgs }}/sjb-1630br.jpg" }
       .item_title 铁管家SJB-1630B/R
   .item.use-home.type-cabinet.lock-electronic.height-15-30-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/sjb-2243br.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/sjb-2243br.html" }
       %img{ src: "{{ site.prodimgs }}/sjb-2243br.jpg" }
       .item_title 铁管家SJB-2243B/R
   .item.use-home.use-business.type-cabinet.lock-electronic.height-15-30-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/sjb-40br.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/sjb-40br.html" }
       %img{ src: "{{ site.prodimgs }}/sjb-40br.jpg" }
       .item_title 铁管家SJB-40ⅢB/R
   .item.use-home.use-business.type-cabinet.lock-electronic.height-15-30-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/sjb-40hbr.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/sjb-40hbr.html" }
       %img{ src: "{{ site.prodimgs }}/sjb-40hbr.jpg" }
       .item_title 铁管家SJB-40HⅢB/R
   .item.use-home.use-business.type-cabinet.lock-electronic.height-15-30-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/sjb-43br.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/sjb-43br.html" }
       %img{ src: "{{ site.prodimgs }}/sjb-43br.jpg" }
       .item_title 铁管家SJB-43ⅢB/R
   .item.use-home.use-business.type-cabinet.lock-electronic.height-15-30-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/sjb-48br.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/sjb-48br.html" }
       %img{ src: "{{ site.prodimgs }}/sjb-48br.jpg" }
       .item_title 铁管家SJB-48ⅢB/R
   .item.use-home.use-business.type-cabinet.lock-electronic.height-31-50-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/sjb-53br.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/sjb-53br.html" }
       %img{ src: "{{ site.prodimgs }}/sjb-53br.jpg" }
       .item_title 铁管家SJB-53ⅢB/R
   .item.use-home.use-business.type-cabinet.lock-electronic.height-31-50-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/sjb-58br.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/sjb-58br.html" }
       %img{ src: "{{ site.prodimgs }}/sjb-58br.jpg" }
       .item_title 铁管家SJB-58ⅢB/R
   .item.use-home.use-business.type-cabinet.lock-electronic.height-15-30-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/tgg-2040br.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/tgg-2040br.html" }
       %img{ src: "{{ site.prodimgs }}/tgg-2040br.jpg" }
       .item_title 铁金钢TGG-2040B/R
   .item.use-home.use-business.type-cabinet.lock-electronic.height-15-30-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/tgg-2045br.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/tgg-2045br.html" }
       %img{ src: "{{ site.prodimgs }}/tgg-2045br.jpg" }
       .item_title 铁金钢TGG-2045B/R
   .item.use-home.use-business.type-cabinet.lock-electronic.height-15-30-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/tgg-2740br.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/tgg-2740br.html" }
       %img{ src: "{{ site.prodimgs }}/tgg-2740br.jpg" }
       .item_title 铁金钢TGG-2740B/R
   .item.use-home.use-business.type-cabinet.lock-electronic.height-31-50-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/tgg-3342br.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/tgg-3342br.html" }
       %img{ src: "{{ site.prodimgs }}/tgg-3342br.jpg" }
       .item_title 铁金钢TGG-3342B/R
   .item.use-home.use-business.type-cabinet.lock-electronic.height-31-50-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/tgg-4538br.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/tgg-4538br.html" }
       %img{ src: "{{ site.prodimgs }}/tgg-4538br.jpg" }
       .item_title 铁金钢TGG-4538B/R
   .item.use-home.use-business.type-cabinet.lock-electronic.height-31-50-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/tgg-4938br.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/tgg-4938br.html" }
       %img{ src: "{{ site.prodimgs }}/tgg-4938br.jpg" }
       .item_title 铁金钢TGG-4938B/R
   .item.use-home.use-business.type-cabinet.lock-electronic.height-51-80-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/tgg-5840br.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/tgg-5840br.html" }
       %img{ src: "{{ site.prodimgs }}/tgg-5840br.jpg" }
       .item_title 铁金钢TGG-5840B/R
   .item.use-home.use-business.type-cabinet.lock-electronic.height-51-80-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/tgg-6442br.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/tgg-6442br.html" }
       %img{ src: "{{ site.prodimgs }}/tgg-6442br.jpg" }
       .item_title 铁金钢TGG-6442B/R
   .item.use-home.use-business.type-cabinet.lock-electronic.height-51-80-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/tgg-7645br.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/tgg-7645br.html" }
       %img{ src: "{{ site.prodimgs }}/tgg-7645br.jpg" }
       .item_title 铁金钢TGG-7645B/R
   .item.use-home.use-business.type-cabinet.lock-electronic.height-15-30-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/fg-2940br.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/fg-2940br.html" }
       %img{ src: "{{ site.prodimgs }}/fg-2940br.jpg" }
       .item_title 钢将军FG-2940B/R
   .item.use-home.use-business.type-cabinet.lock-electronic.height-31-50-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/fg-3542br.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/fg-3542br.html" }
       %img{ src: "{{ site.prodimgs }}/fg-3542br.jpg" }
       .item_title 钢将军FG-3542B/R
   .item.use-home.use-business.type-cabinet.lock-electronic.height-51-80-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/fg-5840br.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/fg-5840br.html" }
       %img{ src: "{{ site.prodimgs }}/fg-5840br.jpg" }
       .item_title 钢将军FG-5840B/R
   .item.use-home.use-business.type-cabinet.lock-electronic.height-51-80-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/fg-6842br.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/fg-6842br.html" }
       %img{ src: "{{ site.prodimgs }}/fg-6842br.jpg" }
       .item_title 钢将军FG-6842B/R
   .item.use-home.use-business.type-cabinet.lock-electronic.height-81-160-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/fg-9150d.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/fg-9150d.html" }
       %img{ src: "{{ site.prodimgs }}/fg-9150d.jpg" }
       .item_title 钢将军FG-9150D
   .item.use-home.use-business.type-cabinet.lock-electronic.height-81-160-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/fg-15870br.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/fg-15870br.html" }
       %img{ src: "{{ site.prodimgs }}/fg-15870br.jpg" }
       .item_title 钢将军FG-15870B/R
   .item.use-hotel.type-cabinet.lock-electronic.height-15-30-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/ct-1540mg.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/ct-1540mg.html" }
       %img{ src: "{{ site.prodimgs }}/ct-1540mg.jpg" }
       .item_title 酒店客房保管箱CT-1540MG
   .item.use-hotel.type-cabinet.lock-electronic.height-15-30-cm
-    %a{ href: "{{ site.www.qnnsafe.com }}/ct-1840mg.html" }
+    %a{ href: "{{ site.www.qnnsafe.com }}/products/ct-1840mg.html" }
       %img{ src: "{{ site.prodimgs }}/ct-1840mg.jpg" }
       .item_title 酒店客房保管箱CT-1840MG
