--- a/index.haml
+++ b/index.haml
@@ -32,7 +32,7 @@ full_title: 保险柜,家用保险柜-全能保险柜箱十大品牌官网
       %img{ src: "/assets/images/billboards/gediao/gediao.jpg" }
   .bb
     .link
-      %a{ href: "{{ site.www.qnnsafe.com }}/b-5440.html" } 全能金库B-5540
+      %a{ href: "{{ site.www.qnnsafe.com }}/products/b-5440.html" } 全能金库B-5540
     .title
       %img{ src: "/assets/images/billboards/b-5440/title.png" }
     .subtitle
@@ -41,7 +41,7 @@ full_title: 保险柜,家用保险柜-全能保险柜箱十大品牌官网
       %img{ src: "http://www.qnnsafe.com/images/products-large/b-5540_01.jpg" }
   .bb
     .link
-      %a{ href: "{{ site.www.qnnsafe.com }}/bw-6960.html" } 风生水起BW-6960
+      %a{ href: "{{ site.www.qnnsafe.com }}/products/bw-6960.html" } 风生水起BW-6960
     .title.one
       %img{ src: "http://www.qnnsafe.com/images/products-large/bw-6960_text_01.png" }
     .subtitle
@@ -49,7 +49,7 @@ full_title: 保险柜,家用保险柜-全能保险柜箱十大品牌官网
       %img{ src: "http://www.qnnsafe.com/images/products-large/bw-6960_01.jpg" }
   .bb
     .link
-      %a{ href: "{{ site.www.qnnsafe.com }}/gtx-5842.html" } 钢铁侠GTX-5842
+      %a{ href: "{{ site.www.qnnsafe.com }}/products/gtx-5842.html" } 钢铁侠GTX-5842
     .title
       %img{ src: "/assets/images/billboards/gtx-5842/title.png" }
     .subtitle
@@ -58,7 +58,7 @@ full_title: 保险柜,家用保险柜-全能保险柜箱十大品牌官网
       %img{ src: "/assets/images/billboards/gtx-5842/gtx-5842.jpg" }
   .bb
     .link
-      %a{ href: "{{ site.www.qnnsafe.com }}/glf-8550.html" } 高尔夫GLF-8550
+      %a{ href: "{{ site.www.qnnsafe.com }}/products/glf-8550.html" } 高尔夫GLF-8550
     .title.one
       %img{ src: "http://www.qnnsafe.com/images/products-large/glf-8550_text_01.png" }
     .subtitle
