--- a/index.haml
+++ b/index.haml
@@ -1,6 +1,6 @@
 ---
 layout: default
-full_title: 保险柜,家用保险柜-全能保险柜箱十大品牌官网
+full_title: 全能保险柜官网-保险柜,保险箱,家用保险柜箱,保险柜十大品牌
 ---
 %article#billboard
   .bb.active
